<resources>
    <string name="app_name">Plaquitas para mascotas</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Plaquitas para mascotas</string>
    <string name="nav_header_subtitle" translatable="false">camg.feedback@gmail.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home">Templates</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="txt_instituto_federal_canino">FEDERAL CANINE INSTITUTE</string>
    <string name="txt_instituto_federal_gatuno">FEDERAL CAT INSTITUTE</string>
    <string name="txt_registro_de_amiguito">FURRY FRIENDS REGISTRY</string>
    <string name="txt_credencial_ladrar">CREDENTIAL TO BARK</string>
    <string name="txt_credencial_maullar">CREDENTIAL TO MEOW</string>
    <string name="txt_nombre">Name:</string>
    <string name="txt_dueno">Owner:</string>
    <string name="txt_Tel">Tel:</string>
    <string name="txt_Color">Color:</string>
    <string name="txt_color">Color</string>
    <string name="txt_Ocupacion">Occupation:</string>
    <string name="txt_ocupacion">Occupation</string>
    <string name="txt_Raza">Breed:</string>
    <string name="txt_raza">Breed</string>
    <string name="txt_EDAD">Age:</string>
    <string name="txt_edad">Age</string>
    <string name="txt_SEXO">AGE</string>
    <string name="reverse_plaquita_text">THE HOLDER OF THIS DOCUMENT HAS A FAMILY THAT LOVES HIM VERY MUCH AND A LITTLE HOUSE WHERE HE IS VERY HAPPY. PLEASE, IF YOU FIND HIM LOST, HELP HIM TO RETURN</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="txt_sexo">SEX:</string>
    <string name="txt_domicilio">Address:</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_plantillas_perros">Dogs templates</string>
    <string name="menu_plantillas_gatos">Cats templates</string>
    <string name="menu_acerca_de">About</string>
    <string name="txt_nombre_mascota">Name pet</string>
    <string name="txt_telefono">Phone</string>
    <string name="txt_Domicilio">Address</string>
    <string name="txt_nombre_dueno">Owner name</string>
    <string name="txt_hembra">Female</string>
    <string name="txt_macho">Male</string>
    <string name="txt_siguiente">Next</string>
    <string name="txt_agregar_foto">Add pet image</string>
    <string name="txt_guardar">Save</string>
    <string name="txt_editar_plantilla">Edit</string>
    <string name="action_pdf" translatable="false">PDF</string>
    <string name="txt_tu_nombre">Your name</string>
    <string name="txt_tus_deseos">Your wishes</string>
    <string name="txt_para_camg">Para: camg.feedback@gmail.com</string>
    <string name="line_feedback">I would love to know how I can improve your experience.</string>
    <string name="txt_enviar">SEND</string>
    <string name="camg_mail" translatable="false">camg.feedback@gmail.com</string>
    <string name="txt_valorar_app">Valorate this app 🌟</string>
    <string name="action_compartrir">Share this app ❤</string>
    <string name="txt_plantilla">Template</string>
    <string name="txt_vista_previa">Preview</string>
    <string name="txt_aceptar">OK</string>
    <string name="txt_compartir">Share</string>
    <string name="action_guardar">Save</string>
    <string name="send_to">"Share "</string>

</resources>