<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@+id/cardViewFrente"
    android:layout_width="310dp"
    android:layout_height="200dp"
    app:cardCornerRadius="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contraint_background"
        android:layout_width="310dp"
        android:layout_height="200dp"
        android:background="@drawable/ic_fondo_nuevo_ife">

        <TextView
            android:id="@+id/tvPrimerTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="4dp"
            android:text="@string/txt_instituto_federal_canino"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSegundoTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_registro_de_amiguito"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvPrimerTitulo"
            app:layout_constraintTop_toBottomOf="@+id/tvPrimerTitulo" />

        <TextView
            android:id="@+id/tvTercerTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_credencial_ladrar"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvSegundoTitulo"
            app:layout_constraintTop_toBottomOf="@+id/tvSegundoTitulo" />

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:background="#F3F0F0"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/txt_nombre"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTercerTitulo" />

        <TextView
            android:id="@+id/tvTel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="#FAF8F8"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/txt_Tel"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNombre" />

        <TextView
            android:id="@+id/tvRaza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="#FDFBFB"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/txt_Raza"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDomicilio" />

        <TextView
            android:id="@+id/tvColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="#F8F7F7"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/txt_Color"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRaza" />

        <TextView
            android:id="@+id/tvOcupacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="#F8F6F6"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/txt_Ocupacion"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvColor" />

        <TextView
            android:id="@+id/tvEdad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="#FBFBFB"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/txt_EDAD"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOcupacion" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPet"
            android:layout_width="90dp"
            android:layout_height="110dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvEdad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvNombre">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#A67474">

                <ImageView
                    android:id="@+id/imageViewPet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#F6F5F5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_pet" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>



        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toTopOf="@+id/tvNombre"
            app:layout_constraintEnd_toStartOf="@+id/tvSegundoTitulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_pawprint" />

        <TextView
            android:id="@+id/textViewDomicilio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FAF8F8"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/txt_domicilio"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/tvTel"
            app:layout_constraintTop_toBottomOf="@+id/tvTel" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>