<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_plantillas">

    <fragment
        android:id="@+id/nav_plantillas"
        android:name="com.camg_apps.placas_perros.ui.plantillas.plantillasFragment"
        android:label="@string/menu_plantillas_perros"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_plantillas_to_plantillaINEFragment"
            app:destination="@id/plantillaINEFragment" />
        <action
            android:id="@+id/action_nav_plantillas_to_plantillaIFEFragment"
            app:destination="@id/plantillaIFEFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.camg_apps.placas_perros.ui.retroalimentacion.FeedbackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_feedback" />
    <fragment
        android:id="@+id/plantillaIFEFragment"
        android:name="com.camg_apps.placas_perros.plantillas.plantillaIFEFragment"
        android:label="@string/txt_plantilla"
        tools:layout="@layout/fragment_plantilla_i_f_e" >
        <action
            android:id="@+id/action_plantillaIFEFragment_to_pdfPreviewFragment"
            app:destination="@id/pdfPreviewFragment" />
    </fragment>
    <fragment
        android:id="@+id/plantillaINEFragment"
        android:name="com.camg_apps.placas_perros.plantillas.plantillaINEFragment"
        android:label="@string/txt_plantilla"
        tools:layout="@layout/fragment_plantilla_i_n_e">
        <action
            android:id="@+id/action_plantillaINEFragment_to_pdfPreviewFragment"
            app:destination="@id/pdfPreviewFragment" />
    </fragment>
    <fragment
        android:id="@+id/pdfPreviewFragment"
        android:name="com.camg_apps.placas_perros.ui.preview.PdfPreviewFragment"
        android:label="@string/txt_vista_previa"
        tools:layout="@layout/fragment_pdf_preview" />
    <fragment
        tools:layout="@layout/fragment_plantillas_gatos_list"
        android:id="@+id/nav_plantillas_gatos"
        android:name="com.camg_apps.placas_perros.ui.plantillas.PlantillasGatosFragment"
        android:label="PlantillasGatosFragment" >

        <action
            android:id="@+id/action_nav_plantillas_gatos_to_plantillaINEFragment"
            app:destination="@id/plantillaINEFragment" />
        <action
            android:id="@+id/action_nav_plantillas_gatos_to_plantillaIFEFragment"
            app:destination="@id/plantillaIFEFragment" />
    </fragment>
</navigation>